--- a/MainAppcation/View/H2Setting.xaml
+++ b/MainAppcation/View/H2Setting.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              xmlns:local="clr-namespace:NetProxyController.View"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:H2SettingViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="H2设置">
         <StackPanel Width="400">
             <Grid>
@@ -21,23 +25,29 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="域名列表(','分割):"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding Hosts}"/>
                 <TextBlock Text="Path:"
                            Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding Path}"/>
                 <TextBlock Text="ReadIdleTimeout:"
                            Grid.Row="2"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="2"/>
+                            Grid.Row="2"
+                            Text="{Binding ReadIdleTimeout}"/>
                 <TextBlock Text="HealthCheckTimeout:"
                            Grid.Row="3"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="3"/>
+                            Grid.Row="3"
+                            Text="{Binding HealthCheckTimeout}"/>
                 <TextBlock Text="请求方法:"
                            Grid.Row="4"/>
                 <hc:ComboBox Grid.Column="1"
-                             Grid.Row="4"/>
+                             Grid.Row="4"
+                             ItemsSource="{Binding MethodValues}"
+                             SelectedItem="{Binding MethodSelectedValue}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
