--- a/MainAppcation/View/GrpcSetting.xaml
+++ b/MainAppcation/View/GrpcSetting.xaml
@@ -5,7 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:GrpcSettingViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="GRPC设置">
         <StackPanel Width="400">
             <Grid>
@@ -21,23 +25,28 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="服务名称:"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding ServiceName}"/>
                 <TextBlock Text="IdleTimeout:"
                            Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding IdleTimeout}"/>
                 <TextBlock Text="HealthCheckTimeout:"
                            Grid.Row="2"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="2"/>
+                            Grid.Row="2"
+                            Text="{Binding HealthCheckTimeout}"/>
                 <TextBlock Text="PermitWithoutStream:"
                            Grid.Row="3"/>
                 <ToggleButton Grid.Column="1"
-                              Grid.Row="3"/>
+                              Grid.Row="3"
+                              IsChecked="{Binding PermitWithoutStream}"/>
                 <TextBlock Text="初始窗口大小:"
                            Grid.Row="4"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="4"/>
+                            Grid.Row="4"
+                            Text="{Binding InitialWindowsSize}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
