--- a/MainAppcation/View/QuicSetting.xaml
+++ b/MainAppcation/View/QuicSetting.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              xmlns:hc="https://handyorg.github.io/handycontrol"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:QuicSettingViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="Quic设置">
         <StackPanel Width="400">
             <Grid>
@@ -19,15 +23,20 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="加密方式:"/>
-                <hc:ComboBox Grid.Column="1"/>
+                <hc:ComboBox Grid.Column="1"
+                             ItemsSource="{Binding SecurityModeValues}"
+                             SelectedItem="{Binding Security}"/>
                 <TextBlock Text="密钥:"
                            Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding Key}"/>
                 <TextBlock Text="伪装类型:"
                            Grid.Row="2"/>
                 <hc:ComboBox Grid.Column="1"
-                             Grid.Row="2"/>
+                             Grid.Row="2"
+                             ItemsSource="{Binding Feign}"
+                             SelectedItem="{Binding FeignSelectedValue}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
