--- a/MainAppcation/View/RealitySetting.xaml
+++ b/MainAppcation/View/RealitySetting.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              xmlns:hc="https://handyorg.github.io/handycontrol"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:RealityInfoSettingViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="Reality设置">
         <StackPanel Width="400">
             <Grid>
@@ -21,28 +25,29 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="SNI(ServerName):"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding ServerName}"/>
                 <TextBlock Text="Tls指纹:"
                            Grid.Row="1"/>
                 <hc:ComboBox Grid.Row="1"
-                             Grid.Column="1"/>
+                             Grid.Column="1"
+                             ItemsSource="{Binding FingerPrintValues}"
+                             SelectedItem="{Binding FingerPrintSelectedValue}"/>
                 <TextBlock Text="ShortId:"
                            Grid.Row="2"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="2"/>
+                            Grid.Row="2"
+                            Text="{Binding ShortId}"/>
                 <TextBlock Text="PublicKey:"
-                           VerticalAlignment="Top"
                            Grid.Row="3"/>
-                <hc:TextBox TextWrapping="Wrap"
-                            VerticalContentAlignment="Top"
-                            FontSize="10"
-                            Grid.Column="1"
+                <hc:TextBox Grid.Column="1"
                             Grid.Row="3"
-                            Height="80"/>
+                            Text="{Binding PublicKey}"/>
                 <TextBlock Text="SpiderX:"
                            Grid.Row="4"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="4"/>
+                            Grid.Row="4"
+                            Text="{Binding SpiderX}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
