--- a/MainAppcation/View/ServerSettingWindow.xaml
+++ b/MainAppcation/View/ServerSettingWindow.xaml
@@ -67,19 +67,22 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="自定义名称:"/>
 
-                            <hc:TextBox Grid.Column="1"/>
+                            <hc:TextBox Grid.Column="1"
+                                        Text="{Binding Remarks}"/>
 
                             <TextBlock Text="地址(Address):"
                                Grid.Row="1"/>
 
                             <hc:TextBox Grid.Column="1"
-                                Grid.Row="1"/>
+                                        Text="{Binding Addr}"
+                                        Grid.Row="1"/>
 
                             <TextBlock Grid.Row="2"
                                Text="端口(Port):"/>
 
                             <hc:TextBox Grid.Column="1"
-                                Grid.Row="2"/>
+                                        Grid.Row="2"
+                                        Text="{Binding PortStr}"/>
 
                             <TextBlock Text="代理协议(Protocol):"
                                        Grid.Row="3"/>
@@ -111,14 +114,10 @@
                     <ContentControl Content="{Binding ProxyUserSettingView}"/>
                 </StackPanel>
                 <StackPanel Grid.Row="4">
-                    <ContentControl>
-                        <local:TcpSetting/>
-                    </ContentControl>
+                    <ContentControl Content="{Binding TransportSettingView}"/>
                 </StackPanel>
                 <StackPanel Grid.Row="6">
-                    <ContentControl>
-                        <local:KcpSetting/>
-                    </ContentControl>
+                    <ContentControl Content="{Binding SecuritySettingView}"/>
                 </StackPanel>
 
             </Grid>
