--- a/MainAppcation/View/ShadowScoksVerifyInfo.xaml
+++ b/MainAppcation/View/ShadowScoksVerifyInfo.xaml
@@ -2,10 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:ShadowSocksVerifyInfoViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="ShadowSocks验证">
         <StackPanel Width="400">
             <Grid>
@@ -20,19 +24,24 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="加密方式:"/>
-                <hc:ComboBox Grid.Column="1"/>
+                <hc:ComboBox Grid.Column="1"
+                             ItemsSource="{Binding EncryptMethodVlues}"
+                             SelectedItem="{Binding EnceryptMethodSelectedValue}"/>
                 <TextBlock Text="密码:"
                            Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding Password}"/>
                 <TextBlock Text="Uot:"
                            Grid.Row="2"/>
                 <ToggleButton Grid.Column="1"
-                              Grid.Row="2"/>
+                              Grid.Row="2"
+                              IsChecked="{Binding Uot}"/>
                 <TextBlock Text="邮箱:"
                            Grid.Row="3"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="3"/>
+                            Grid.Row="3"
+                            Text="{Binding Eamail}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
