--- a/MainAppcation/View/SocksVerifyInfo.xaml
+++ b/MainAppcation/View/SocksVerifyInfo.xaml
@@ -2,10 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:SocksVerifyInfoViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="Socks验证">
         <StackPanel Width="400">
             <Grid>
@@ -18,11 +22,13 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="用户名:"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding User}"/>
                 <TextBlock Text="密码:"
                        Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding PassWord}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
