--- a/MainAppcation/View/TlsSetting.xaml
+++ b/MainAppcation/View/TlsSetting.xaml
@@ -5,9 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
-             mc:Ignorable="d" >
+             mc:Ignorable="d"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle">
+    <UserControl.DataContext>
+        <vm:TlsSettingViewModle/>
+    </UserControl.DataContext>
     <StackPanel>
-        <GroupBox Header="Tls设置">
+        <GroupBox Header="Tls/Xtls设置">
             <Grid Width="400">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -19,15 +23,19 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="SNI(ServerName):"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding ServerName}"/>
                 <TextBlock Text="Tls指纹:"
                            Grid.Row="1"/>
                 <hc:ComboBox Grid.Row="1"
-                            Grid.Column="1"/>
+                             Grid.Column="1"
+                             ItemsSource="{Binding FingerPrintValues}"
+                             SelectedItem="{Binding FingerPrintSelectedValue}"/>
                 <TextBlock Text="跳过证书验证:"
                            Grid.Row="2"/>
                 <ToggleButton Grid.Column="1"
-                              Grid.Row="2"/>
+                              Grid.Row="2"
+                              IsChecked="{Binding AllowInsecure}"/>
             </Grid>
         </GroupBox>
     </StackPanel>
