--- a/MainAppcation/View/TrojanVerifyInfo.xaml
+++ b/MainAppcation/View/TrojanVerifyInfo.xaml
@@ -5,7 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              mc:Ignorable="d">
+    <UserControl.DataContext>
+        <vm:TrojanVerifyInfoViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="Trojan验证">
         <StackPanel Width="400">
             <Grid>
@@ -18,11 +22,13 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="密码:"/>
-                <hc:TextBox Grid.Column="1"/>
+                <hc:TextBox Grid.Column="1"
+                            Text="{Binding Password}"/>
                 <TextBlock Text="邮箱:"
                            Grid.Row="1"/>
                 <hc:TextBox Grid.Column="1"
-                            Grid.Row="1"/>
+                            Grid.Row="1"
+                            Text="{Binding Email}"/>
             </Grid>
         </StackPanel>
     </GroupBox>
