--- a/MainAppcation/View/VlessVerifyInfo.xaml
+++ b/MainAppcation/View/VlessVerifyInfo.xaml
@@ -5,8 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NetProxyController.View"
              xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:vm="clr-namespace:NetProxyController.ViewModle"
              mc:Ignorable="d" 
              Width="auto" Height="auto">
+    <UserControl.DataContext>
+        <vm:VlessVerifyInfoViewModle/>
+    </UserControl.DataContext>
     <GroupBox Header="验证信息(Vless)">
         <Grid Width="400">
             <Grid.ColumnDefinitions>
@@ -18,11 +22,14 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock Text="用户ID(UUID):"/>
-            <hc:TextBox Grid.Column="1"/>
+            <hc:TextBox Grid.Column="1"
+                        Text="{Binding Id}"/>
             <TextBlock Text="流控(Flow):"
                        Grid.Row="1"/>
             <hc:ComboBox Grid.Row="1"
-                         Grid.Column="1"/>
+                         Grid.Column="1"
+                         ItemsSource="{Binding FlowValues}"
+                         SelectedItem="{Binding FlowSeletctedValue}"/>
         </Grid>        
     </GroupBox>
 </UserControl>
