--- a/MainAppcation/View/ServerSettingWindow.xaml
+++ b/MainAppcation/View/ServerSettingWindow.xaml
@@ -1,17 +1,16 @@
 ﻿<Window x:Class="NetProxyController.View.ServerSettingWindow"
+        x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:local="clr-namespace:NetProxyController.View"
-        xmlns:vm="clr-namespace:NetProxyController.ViewModle"
+        xmlns:vm="clr-namespace:NetProxyController.ViewModle"       
         mc:Ignorable="d"
         Background="#ebf3ff"
         Title="ServerSettingWindow" Height="700" Width="500">
-    <Window.DataContext>
-        <vm:ServerSettingViewModle/>
-    </Window.DataContext>
+
     <StackPanel>
         <hc:ScrollViewer Height="600">
             <Grid>
@@ -128,6 +127,7 @@
                 Content="保存设置"
                 Width="200"
                 Margin="0,15"
+                Command="{Binding SaveBtnCmd}"
                 />
     </StackPanel>
     
