--- a/MainAppcation/View/ServerManager.xaml
+++ b/MainAppcation/View/ServerManager.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="NetProxyController.View.ServerManager"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        x:ClassModifier="internal"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetProxyController.View"
@@ -19,14 +20,15 @@
         </ResourceDictionary>
     </Window.Resources>
     <StackPanel>
-        <ListView Height="400" ItemsSource="{Binding ServerItem}">
+        <ListView Height="330" Width="auto" ItemsSource="{Binding ServerItemList}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="100" Header="名称" DisplayMemberBinding="{Binding Remarks}"/>
+                    <GridViewColumn Width="120" Header="名称" DisplayMemberBinding="{Binding ServerName}"/>
                     <GridViewColumn Width="100" Header="地址" DisplayMemberBinding="{Binding Address}"/>
                     <GridViewColumn Width="80" Header="端口" DisplayMemberBinding="{Binding Port}"/>
-                    <GridViewColumn Width="80" Header="代理协议" DisplayMemberBinding="{Binding Protocol}"/>
-                    
+                    <GridViewColumn Width="80" Header="代理协议" DisplayMemberBinding="{Binding ProxyProtocol}"/>
+                    <GridViewColumn Width="80" Header="传输协议" DisplayMemberBinding="{Binding TransportProtocol}"/>
+                    <GridViewColumn Width="80" Header="安全策略" DisplayMemberBinding="{Binding SecurityPolicy}"/>
                 </GridView>
             </ListView.View>       
         </ListView>
