--- a/MainAppcation/View/ServerManager.xaml
+++ b/MainAppcation/View/ServerManager.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:ClassModifier="internal"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetProxyController.View"
@@ -20,7 +21,12 @@
         </ResourceDictionary>
     </Window.Resources>
     <StackPanel>
-        <ListView Height="330" Width="auto" ItemsSource="{Binding ServerItemList}">
+        <ListView x:Name="listView" Height="330" Width="auto" ItemsSource="{Binding ServerItemList}" SelectedItem="{Binding SelectServerItem}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <EventSetter Event="MouseDoubleClick" Handler="{Binding ItemDoubleClick}"/>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="120" Header="名称" DisplayMemberBinding="{Binding ServerName}"/>
@@ -32,5 +38,6 @@
                 </GridView>
             </ListView.View>       
         </ListView>
+        
     </StackPanel>
 </Window>
