定义的附加属性，在style的setter里设置属性，xaml设计器始终报错，但运行一切正常，多半是vs的bug了

--- a/MainAppcation/View/ServerManager.xaml
+++ b/MainAppcation/View/ServerManager.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:ClassModifier="internal"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetProxyController.View"
@@ -23,8 +22,8 @@
     <StackPanel>
         <ListView x:Name="listView" Height="330" Width="auto" ItemsSource="{Binding ServerItemList}" SelectedItem="{Binding SelectServerItem}">
             <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <EventSetter Event="MouseDoubleClick" Handler="{Binding ItemDoubleClick}"/>
+                <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemBaseStyle}">
+                    <Setter Property="local:EventCommandBehavior.DoubleClick1" Value="{Binding DoubleClickItemCmd}"/>
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.View>
