--- a/MainAppcation/View/ServerManager.xaml
+++ b/MainAppcation/View/ServerManager.xaml
@@ -25,9 +25,11 @@
             <Button Content="新建服务器" Command="{Binding CreateProxyServerCmd}"/>
             <Button Content="编辑" IsEnabled="{Binding SelectedItemsIsSingle, Mode=OneWay}" Command="{Binding EditServerCmd}"/>
             <Button Content="删除" IsEnabled="{Binding SelectedItemsIsMultiple, Mode=OneWay}" Command="{Binding DeleteServerCmd}"/>
-            <Button Content="设为默认路由出口" IsEnabled="{Binding SelectedItemsIsSingle, Mode=OneWay}"/>
+            <Button Content="设为默认路由出口" IsEnabled="{Binding SelectedItemsIsSingle, Mode=OneWay}" Command="{Binding SetDefalutRoutingCmd}"/>
         </hc:ButtonGroup>
-        <ListView x:Name="listView" Height="330" Width="auto" ItemsSource="{Binding ServerItemList.View}" local:AttachProperties.SelectionChangedCommand="{Binding SelectionChangedCmd}">
+        <ListView x:Name="listView" Height="330" Width="auto" 
+                  ItemsSource="{Binding ServerItemList.View}" 
+                  local:AttachProperties.SelectionChangedCommand="{Binding SelectionChangedCmd}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemBaseStyle}">
                     <Setter Property="local:AttachProperties.DoubleClick" Value="{Binding DoubleClickItemCmd}"/>
@@ -36,7 +38,7 @@
             </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="20" DisplayMemberBinding="{Binding}"/>
+                    <GridViewColumn Width="30" DisplayMemberBinding="{Binding DefaultRoutingFlag}"/>
                     <GridViewColumn Width="120" Header="名称" DisplayMemberBinding="{Binding ServerName}"/>
                     <GridViewColumn Width="100" Header="地址" DisplayMemberBinding="{Binding Address}"/>
                     <GridViewColumn Width="80" Header="端口" DisplayMemberBinding="{Binding Port}"/>
