--- a/MainAppcation/View/SettingWindow.xaml
+++ b/MainAppcation/View/SettingWindow.xaml
@@ -1,15 +1,24 @@
 ﻿<Window x:Class="NetProxyController.SettingWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
-    mc:Ignorable="d"
-    Background="#ebf3ff"
-    ResizeMode="CanMinimize"
-    WindowStartupLocation="CenterScreen"
-    Icon="/Icon/Setting.ico"
-    Title="参数设置" Height="470" Width="380">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:vm="clr-namespace:NetProxyController.ViewModle"
+        xmlns:local="clr-namespace:NetProxyController.View"
+        x:ClassModifier="internal"
+        mc:Ignorable="d"
+        Background="#ebf3ff"
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen"
+        x:Name="Window"
+        Icon="/Icon/Setting.ico"
+        Title="参数设置" Height="470" Width="380">
+
+
+    <Window.DataContext>
+        <vm:SettingWindowViewModle/>
+    </Window.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -45,14 +54,14 @@
                     hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
                     hc:InfoElement.Placeholder="1-65535"
                     Grid.Column="1"
-                    PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
+                    local:AttachProperties.PreviewKeyDownCommand="{Binding NumberInputPreviewKeyDownCmd}"
                     Style="{StaticResource TextBoxPlusBaseStyle}"
                     Text="{Binding HttpPort, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"/>
 
             <hc:TextBox hc:InfoElement.ShowClearButton="True" 
                 hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
                 hc:InfoElement.Placeholder="1-65535"
-                PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
+                local:AttachProperties.PreviewKeyDownCommand="{Binding NumberInputPreviewKeyDownCmd}"
                 Grid.Column="1" Grid.Row="1"
                 Style="{StaticResource TextBoxPlusBaseStyle}"
                 Text="{Binding SocksPort, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"/>
@@ -87,9 +96,9 @@
                     hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
                     hc:InfoElement.Placeholder="录入按键"
                     Grid.Column="4" Grid.Row="4" FontSize="11"
-                    Text="{Binding HotkeyStr, Mode=OneWay}"
+                    Text="{Binding Hotkey, Mode=OneWay}"
                     IsEnabled="{Binding HotKeyEnableChecked}"
-                    PreviewKeyDown="TextboxByHotkeySetting_PreviewKeyDown"
+                    local:AttachProperties.PreviewKeyDownCommand="{Binding HotkeyInputPreviewKeyDownCmd}"
                     Style="{StaticResource TextBoxPlusBaseStyle}">
             </hc:TextBox>
         </Grid>
@@ -104,7 +113,7 @@
             <Button Style="{StaticResource ButtonInfo}" Width="180" 
                 Background="RoyalBlue" Content="保存"
                 Margin="0,0,0,0" IsEnabled="{Binding SaveBtnEnable, Mode=TwoWay}"
-                Command="{Binding SaveBtnCmd}"/>
+                Command="{Binding SaveBtnCmd}" CommandParameter="{Binding ElementName=Window}"/>
         </Grid>
 
     </Grid>
